; ModuleID = '/home/carl/AnghaBench/redis/src/extr_rio.c_rioConnWrite.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_rio.c_rioConnWrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i8*, i64)* @rioConnWrite to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @rioConnWrite(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = ptrtoint i32* %7 to i64
  %9 = call i32 @UNUSED(i64 %8)
  %10 = load i8*, i8** %5, align 8
  %11 = ptrtoint i8* %10 to i64
  %12 = call i32 @UNUSED(i64 %11)
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @UNUSED(i64 %13)
  ret i64 0
}

declare dso_local i32 @UNUSED(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
